...
                        headerShown: false,
                    }}
                />
                <Stack.Screen
                    name="account/profile"
                    options={{
                        title: 'Profile',
                        headerShown: false,
                    }}
                />
                <Stack.Screen
                    name="events/ride-and-earn"
                    options={{
                        title: 'Devia Route Study',
                        headerShown: true,
                        headerLeft: () => <HeaderBackButton onPress={() => router.dismiss()} />,
                    }}
                />
                <Stack.Screen
                    name="events/[id]"
...
